--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <!--profile picture-->
 
     <h2>Profile Picture</h2>
-            <img src="malupiton.jpg" alt="picture of malupiton" width="200px" height="350px" 
+            <img src="profile pic.jpg" alt="picture of me" width="310px" height="330px" 
             style="border-radius: 20px; border: 10px black solid; margin-left: 20px;">
       
 <!--hobbies-->
