--- a/index.html
+++ b/index.html
@@ -1,66 +1,85 @@
 <!DOCTYPE html>
+
+<!--start-->
+
 <html >
+
       <head>
+
             <title>My Personal Profile</title>
+
       </head>
+
   <body>
 
-    <h1>My Personal Information</h1>
+<!--my name and header part-->                
+            <header>
+                <h1>Marc Allen C. Guillermo</h1>
+            </header>
 
-<hr color="black">   
-<!--my name-->
+<!--main content-->
+        <main> 
 
-    <h1>Marc Allen C. Guillermo</h1>
+    <hr color="black">  
 
 <!--introduction-->
+            <h2>About me</h2>
 
-    <p>Greetings!!, I'm <b>Marc Allen C. Guillermo,</b> I'm a <i>BSIT
-        student</i> currently studying at <b>Tarlac State University</b> 
-        aspiring to be a <b>Software Engineer</b> or <b>Network Engineer</b> someday
-        and build a <i>startup business</i> like <b>bryl lim</b>, I was inspired by him
-        to make a startup business like his <a href="https://www.pocketdevs.ph/" target="_blank"> 
-        Pocket devs</a>, someday <i>I'll be founding a business like that with my 
-        friends</i>, last year I try creating my <b>portfolio website</b> by <i>watching youtube</i> and
-        trying to clone it and this is what it looks like <a href="https://lucy-furr.github.io/Marcallenguillermo/" 
-        target="_blank"> click me</a> its not responsive because I'm not that good at js,
-        the js I only know is the hero in mobile legends.
-    </p>
+                <p>Greetings!, I'm <b>Marc Allen C. Guillermo,</b> I'm a <b><i>BSIT
+                    student</i></b> currently studying at <b>Tarlac State University</b> 
+                    aspiring to be a <b>Software Engineer</b> or <b>Network Engineer</b> someday
+                    and build a <i>startup business</i> like <b>bryl lim</b>, I was inspired by him
+                    to create a <strong>startup business</strong> like his <a href="https://www.pocketdevs.ph/" target="_blank"> 
+                    Pocket devs</a>,<b><i> someday I'll be founding a business like that with my 
+                    friends</i></b>, last year I try creating my <b>portfolio website</b> by <strong><i>watching youtube</i></strong> 
+                    and understand each part of it then try to clone it and this is what it looks like 
+                    <a href="https://lucy-furr.github.io/Marcallenguillermo/" target="_blank"> click me</a> <b>its not that responsive</b> 
+                    because <b><i>I'm still exploring JavaScript</i></b>, hopefully at the end of the semester, I will be able to put some 
+                    <b><i>more advance features.</i></b>
+                </p>
 
 <!--profile picture-->
+            <h2>Profile Picture</h2>
+            <img src="https://i.ibb.co/9N8x6Bc/profile-pic.jpg" alt="profile-pic" width="310px" height="330px" 
+             style="border-radius: 20px; border: 10px black solid; margin-left: 20px;">
+              
+<!--hobbies and interests-->
+            <h2>My Hobbies/interests</h2>
+                <ul>
+                    <li>Playing mobile legends</li>
+                    <li>Hiking and camping</li>
+                    <li>Cooking</li>
+                    <li>Fixing things</li>
+                </ul>           
 
-    <h2>Profile Picture</h2>
-            <img src="profile pic.jpg" alt="picture of me" width="310px" height="330px" 
-            style="border-radius: 20px; border: 10px black solid; margin-left: 20px;">
-      
-<!--hobbies-->
-
-    <h2>My Hobbies</h2>
-        <ul>
-             <li>Playing mobile legends</li>
-             <li>Hiking and camping</li>
-             <li>Cooking</li>
-             <li>Fixing things</li>
-        </ul>
-
-<!--fav books and movies-->   
-
-    <h2>My Favorite Books and Movies</h2> 
-        <ol>
-            <li>The 48 laws of power</li>
-            <li>The laws of human nature</li>
-            <li>Art of war</li>
-        </ol>  
+<!--fav books-->   
+            <h2>My Favorite Books</h2> 
+                <ol>
+                    <li>The 48 laws of power by Robert Greene</li>
+                    <li>The laws of human nature by Robert Greene</li>
+                    <li>Art of war by Sun Tzu</li>
+                </ol>  
 
 <!--contacts-->
+            <h2>Contact Me</h2>
+            <!--chat gpt was my favorite website not because of using ai as my assignment maker, i use it acting as google like
+            instead of searching the web, i just ask ai the questions I want to know specially when the question is situational,
+            I just encountered one, like one small business call me to fix all I know about their computer then one time I discovered 
+            that they using usb to transfer data from old computer and OS(window 7) and unfortunately all their active data
+            (records from 2023 to 2024) is in the usb and have a trojan horse, then when I plug the usb to the new computer 
+            running windows 11 all their data in usb was gone, remove by windows defender, I use chat gpt to describe the situation 
+            and fortunately I recovered all their data and copy all the data to another usb drive. so chat gpt was my favorite website-->
+                <p>This is my favorite website: <a href="https://openai.com/chatgpt/" target="_blank"> All you need is here!</a></p>
+                <p>Message me at: <a href="mailto:cramnellaguillermo@gmail.com">cramnellaguillermo@gmail.com</a></p>
+        </main>
 
-    <h2>Contact Me</h2>
-        <p>This is my Favorite website: <a href="https://openai.com/chatgpt/" target="_blank"> All you need is here!</a></p>
-        <p>message me at: <a href="mailto:cramnellaguillermo@gmail.com">cramnellaguillermo@gmail.com</a></p>
+    <hr>
 
 <!--footer-->
+        <footer>
+            <p>&copy; 2024 Marc Allen C. Guillermo</p>
+        </footer>
 
-    <footer>
-        <p>&copy; 2024 Marc Allen C. Guillermo</p>
-    </footer>
   </body>
+  
 </html>
